# lambdagent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITYSPEC.md  __init__.py  _shell_compat.py  async_core.py  cancellation.py  conftest.py  conversation.py  core.py  extensions.py  from_config.py  handlers.py  hooks.py  mcp_server.py  multiagent.py  primitives.py  pyproject.toml  rate_limiter.py  resilient_mcp.py  retry.py  rewrite.py  ruff.toml  sandbox.py  skills.py  trace.py  types.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  test.yml
agentruntime/: __init__.py  action_parser.py  async_executor.py  cek_engine.py  engine.py  memory_backend.py  trace_store.py
builtin_tools/: __init__.py  code_tools.py  file_tools.py  knowledge_tools.py  permission_ui.py  qa_tools.py  registry.py  shell_tools.py  web_tools.py
cli/: shell_tool.py
examples/: agent-config.yml  demo_advanced.py  ex01_church_primitives.py  ex02_research_agent.py  ex03_from_yaml.py  ex04_generalization.py  ex05_failure_boundary.py  ex06_multiagent.py  ex07_skills.py  ex08_mcp_checkpoint.py  ex09_a2a_rag.py  nl2agent_demo.py  quick_start.py  react_agent.yml  test_cek_claude.py
extractors/: autogen_extractor.py  crewai_extractor.py
fromconfig/: __init__.py  compiler.py  errors.py  lint.py
mcp_server_package/: README.md  pyproject.toml
providers/: __init__.py  anthropic_provider.py  claude_code.py  claude_code_provider.py  openai_compat_provider.py
skillpacks/: __init__.py
skillpacks/research/: skills.py
src/lambdagent/: __init__.py  __main__.py  _shell_compat.py  a2a.py  async_core.py  cancellation.py  cek_machine.py  checkpoint.py  concurrent_tools.py  context_manager.py  conversation.py  core.py  cost_grade.py  dataset.py  effects.py  execution_checkpoint.py  extensions.py  from_config.py  handlers.py  hooks.py  isolation.py  lam_types.py  lint.py  mcp_client.py  mcp_server.py  multiagent.py  observability.py  patterns.py  primitives.py  rag.py  rate_limiter.py  resilient_mcp.py  retry.py  rewrite.py  sandbox.py  skills.py  store_analysis.py  token_budget.py  tool_gateway.py  tracing.py  (+1 more)
src/lambdagent/agentruntime/: __init__.py  action_parser.py  adaptive_engine.py  async_executor.py  async_react_engine.py  cek_engine.py  config.py  engine.py  executor.py  llm_adapter.py  mcp_client.py  memory_backend.py  react_engine.py  recursive_engine.py  runtime.py  termination.py  trace_store.py
src/lambdagent/builtin_tools/: __init__.py  code_tools.py  file_tools.py  knowledge_tools.py  permission_ui.py  qa_tools.py  registry.py  shell_tools.py  task_manager.py  terminal_ui.py  web_tools.py  wiki_tools.py
src/lambdagent/cli/: __init__.py  main.py  shell_tool.py
src/lambdagent/extractors/: __init__.py  autogen_extractor.py  base.py  crewai_extractor.py  langchain_extractor.py
src/lambdagent/fromconfig/: __init__.py  compiler.py  errors.py  lambda_expr.py  lint.py  schema.py
src/lambdagent/providers/: __init__.py  anthropic_provider.py  base.py  claude_code.py  claude_code_provider.py  openai_compat_provider.py
src/lambdagent/skillpacks/research/: __init__.py  agent-config.yml  skills.py
tests/: test_builtin_tools.py  test_cek_upgraded.py  test_core_primitives.py  test_cost_grade.py  test_effects.py  test_engine.py  test_extractors.py  test_handlers.py  test_hooks.py  test_knowledge.py  test_multiagent_constructs.py  test_paas_services.py  test_phase1.py  test_phase2.py  test_phase3.py  test_providers.py  test_rewrite.py  test_store_independence.py  test_tier3.py  test_types.py  test_yaml_fuzz.py
