[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdagent"
version = "0.1.0"
description = "A Lambda Calculus Agent DSL — every agent is a function, every composition is function composition, every loop is a Y combinator."
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.10"
authors = [
    {name = "Qin Liu", email = "qinliu@nju.edu.cn"},
]
maintainers = [
    {name = "Qin Liu", email = "qinliu@nju.edu.cn"},
]
keywords = ["agent", "lambda-calculus", "dsl", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
openai = ["openai>=1.0.0"]
all = ["anthropic>=0.20.0", "openai>=1.0.0"]

[project.scripts]
lambdagent = "lambdagent.cli.main:main"

[project.urls]
Homepage = "https://github.com/kenny67nju/lambdagent"
Repository = "https://github.com/kenny67nju/lambdagent"
Issues = "https://github.com/kenny67nju/lambdagent/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore::DeprecationWarning:lambdagent.from_config",
    "ignore::DeprecationWarning:lambdagent.lint",
]

[tool.setuptools]
package-dir = {"lambdagent" = "."}
packages = [
    "lambdagent",
    "lambdagent.agentruntime",
    "lambdagent.builtin_tools",
    "lambdagent.cli",
    "lambdagent.extractors",
    "lambdagent.fromconfig",
    "lambdagent.providers",
    "lambdagent.skillpacks",
    "lambdagent.skillpacks.research",
]
