[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdagent-mcp-server"
version = "0.1.0"
description = "MCP Server for lambdagent static analysis — lint, type check, cost prediction, parallel safety"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Qin Liu", email = "qinliu@smail.nju.edu.cn"}]
keywords = ["agent", "llm", "mcp", "lint", "type-check", "cost-prediction", "lambda-calculus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml>=6.0",
    "lambdagent>=0.1.0",
]

[project.scripts]
lambdagent-mcp-server = "lambdagent.mcp_server:main"

[project.urls]
Homepage = "https://github.com/qinliu-nju/lambdagentpaas"
Documentation = "https://github.com/qinliu-nju/lambdagentpaas/blob/main/docs/integration-strategy.md"
